[package]
name = "depositreserve_Liq_And_Ob_Col"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"


[lib]
name = "depositreserve_Liq_And_Ob_Col"
crate-type = ["cdylib", "lib"]

